# peerprep

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json
.github/: dependabot.yml
.github/workflows/: build-and-lint-frontend.yml  build-docker-images.yml  build-frontend.yml  build.yml
deployment/: .env.example  Dockerfile-executor  Dockerfile-executor-local  Dockerfile-frontend  Dockerfile-innkeeper  Dockerfile-nginx  Dockerfile-nginx-local  Dockerfile-questions  Dockerfile-users  docker-compose.yml
deployment/nginx/sites-enabled/: localhost  peerprep.sivarn.com
executor/: .gitignore  CMakeLists.txt  default.nix  executor.sh  shell.nix
executor/src/: child_process.cpp  child_process.hpp  exec_endpoint.cpp  exec_endpoint.hpp  main.cpp  util.cpp  util.hpp
firebase-auth/: service-account.json
frontend/: .env  .env.local.example  .eslintignore  .prettierrc  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/public/utils/: webworker.js
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/libs/: firebase-admin-config.ts  firebase-config.ts  innkeeper-api-types.ts  room-jotai.ts  (+1 more)
innkeeper/: .env.example  .gitignore  README.md  package.json  tsconfig.json
innkeeper/src/: codemirror__index.d.ts  index.ts
questions/: .env  .env.example  .gitignore  package.json
questions/src/: index.ts
serverless/: .env.example  .firebaserc  requirements.txt  run.py
serverless/functions/: main.py
users/: .env  .env.example  .gitignore  package.json  tsconfig.json
users/src/: index.ts
(+71 files in other folders)
